force-app/main/default/objects/AHA_ERL_Category_Guidance_Junction__c/AHA_ERL_Category_Guidance_Junction__c.object-meta.xml
<CustomObject>
    <label>AHA-ERL Category-Guidance Junction</label>
    <nameField>
        <displayFormat>RSCGJ-{00000}</displayFormat>
        <label>AHA-ERL Category Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AHA-ERL Category-Guidance Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>