force-app/main/default/objects/AHA_ERL_Category_Guidance_Junction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>AHA_ERL_Category__c</referenceTo>
    <relationshipLabel>Category-Guidance Junctions</relationshipLabel>
    <relationshipName>CategoryGuidance_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>