force-app/main/default/objects/AHA_ERL_Category_Guidance_Junction__c/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <label>Guidance</label>
    <referenceTo>AHA_ERL_Guidance__c</referenceTo>
    <relationshipLabel>Category-Guidance Junctions</relationshipLabel>
    <relationshipName>CategoryGuidance_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>