force-app/main/default/objects/AHA_ERL_Category_Guidance_Junction__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Profile</label>
    <referenceTo>AHA_ERL_Code_Profile__c</referenceTo>
    <relationshipLabel>Category-Guidance Junctions</relationshipLabel>
    <relationshipName>CategoryGuidance_Junctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>